@@ -68,11 +68,11 @@ function check_version($version = 0) {
 	$date = 0;
 	$versions = array('2.5', 'sfee3.3', 'sfee3.0', '2.6','3.0pre5', '3.0pre6', '3.0pre7', '3.0pre8', '3.0pre9',
 					'3.0b1', '3.0rc2', '3.0', '3.1', '3.21', '3.3', '4.0', '4.0.1', '4.0.2', '4.5.0.1','4.5.11',
-					'4.6', '4.7', '4.7.3', '4.8rc2', '4.8', '4.8.1');
+					'4.6', '4.7', '4.7.3', '4.8rc2', '4.8', '4.8.1','4.8.2');
 	$dates    = array('20001219', '20021001', '20021001', '20021001', '20021206', '20021210', '20021214', '20021230',
 					'20030115', '20030304',	'20030510', '20040511', '20031026', '20040108', '20040326', '20041025',
 					'20041107', '20041215','20050803','20050810',
-					'20070924', '20070924', '20070924', '20090402', '20090402', '20090402');
+					'20070924', '20070924', '20070924', '20090402', '20090402', '20090402','20090402');
 
 	if (in_array($version, $versions)) {
 		$date = $dates[array_search($version, $versions)];
