@@ -3,7 +3,7 @@
 
 Summary: CVS Plugin for FusionForge
 Name: fusionforge-plugin-%{plugin}
-Version: 4.8.1
+Version: 4.8.2
 Release: %{release}
 BuildArch: noarch
 License: GPL
