@@ -1,3 +1,6 @@
+FusionForge-4.8.2:
+* Maintenance release, security and bugfixes.
+
 FusionForge-4.8.1:
 * Maintenance release, only bugfixes.
 
